--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <div class="innerContainer">
 
         </div>
-        <script src="script.js"></script>
+
+    </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
