added buttons selection

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="tries">
-                <img src="./img/heart.png" alt="tries">5
+                <img src="./img/heart.png" alt="tries"><div class="score">5</div>
             </div>
         </div>
         <h2>Tap the pairs</h2>
