added correct and wrong style

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         </div>
         <h2>Tap the pairs</h2>
         <div class="innerContainer">
-
+            <div class="column-1"></div>
+            <div class="column-2"></div>
         </div>
 
     </div>
